--- a/stay_info.html
+++ b/stay_info.html
@@ -20,7 +20,7 @@
     <!-- 부트스트랩 css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- 카카오 지도 API -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6a6fd114afe115e9bc87d52356b640b9"></script>
+    <!--<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6a6fd114afe115e9bc87d52356b640b9"></script>-->
 
     <script>
        /* $(function() {
@@ -57,8 +57,16 @@
         
         $(function() {
             var className = document.getElementsByClassName("amenitie");
-            $('.amenitie[0]').click(function() {
-                    $('.amenitie[0] > span').show();
+            $(".amenitie").click(function() {
+                if($(this).children().css("display") == "none") {
+                    $(this).children().show();
+                }else {
+                    $(this).children().hide();
+                }
+                /*$(this).children().show();
+                if($(this).children().style.display == "block") {
+                    $(this).children().hide();
+                }*/
             })
         });
     </script>
