--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
     <!-- 스크롤시 상단바 -->
     <!-- <script src="js/stay/scroll.js"></script>
     <link rel="stylesheet" type="text/css" href="css/stay/scroll.css"> -->
+    <!-- 상단 숙소유형, 체크인, 체크아웃, 인원수 -->
+    <script src="js/stay/search_common.js"></script>
 
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+    <!-- 아이콘 클릭시 input(숙소유형)에 이름 -->
+    <script>
+        
+    </script>
 </head>
 <body>
     <!--건너뛰기 링크-->
@@ -113,13 +118,7 @@
                                 <form action="" name="frm_stay_search" class="stay_search_area">
                                     <label>
                                         <span class="bed fa fa-bed" aria-hidden="true"></span>
-                                        <select name="stay_select" id="stay_select">
-                                            <option value="default" class="hidden"></option>
-                                            <option value="house">펜션</option>
-                                            <option value="hotel">호텔</option>
-                                            <option value="camping">캠핑장</option>
-                                            <option value="hanok">한옥</option>
-                                        </select>
+                                        <input type="text" name="selected" id="selected" disabled value="펜션">
                                     </label>
                                     <label>
                                         <span class="cal far fa-calendar-alt"></span>
@@ -133,7 +132,7 @@
                                         <span class="users fa fa-users" aria-hidden="true"></span>
                                         <input type="text" class="stay_person" name="stay_person" placeholder="인원수">
                                     </label>
-                                    <button type="button" class="btn_stay_search"><span class=" saerch fa fa-search" aria-hidden="true"></span></button>
+                                    <button type="button" class="btn_stay_search" onclick="fn_search_submit()"><span class=" saerch fa fa-search" aria-hidden="true"></span></button>
                                 </form>
                             </div>
                         </div>
@@ -397,7 +396,7 @@
                         </div>
                         <!-- 우측 인기차트? 영역 -->
                         <div class="col-md-4">
-                            <div class="position-sticky" style="top: 2rem;" id="event_wrap">
+                            <div id="event_wrap">
                                 <div class="mb-3 rounded" id="place">
                                     <h5>이벤트</h5>
                                     <img src="images/Home/event/event1.png" alt="event">
