--- a/index.html
+++ b/index.html
@@ -24,18 +24,39 @@
     <!-- <script src="js/stay/scroll.js"></script>
     <link rel="stylesheet" type="text/css" href="css/stay/scroll.css"> -->
     <!-- 상단 숙소유형, 체크인, 체크아웃, 인원수 -->
-    <script src="js/stay/search_common.js"></script>
 
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- 아이콘 클릭시 input(숙소유형)에 이름 -->
     <script>
-        
+        function fn_search_submit () {
+    const frm = document.frm_stay_search;
+
+    if(frm.selected.value === "none") {
+        alert("숙소 유형을 선택해주세요")
+        return false;
+    }
+    if(frm.check_in.value === "" || frm.check_in.value.length === 0) {
+        alert("체크인 날짜를 입력해주세요");
+        return false;
+    }
+    if(frm.check_out.value === "" || frm.check_out.value.length === 0) {
+        alert("체크아웃 날짜를 입력해주세요");
+        return false;
+    }
+    if(frm.stay_person.value === "" || frm.stay_person.value.length === 0) {
+        alert("인원수를 입력해주세요");
+        frm.stay_person.focus();
+        return false;
+    }
+
+    frm.submit();
+}
     </script>
 </head>
 <body>
     <!--건너뛰기 링크-->
-    <a id="skipNav" href="#contentsArea">본문 바로가기</a>
+    <a id="skipNav" href="#contents-area">본문 바로가기</a>
     <!--건너뛰기 링크 종료-->
 
     <!-- wraper -->
